# aides-jeunes

./: .babelrc  .editorconfig  .env.dist  .env.e2e  .env.example  .env.iframe_build_control  .env.sample  .eslintignore  .eslintrc  .eslintrc-auto-import.json  .eslintrc.cjs  .eslintrc.js  .eslintrc.json  .eslintrc.yml  .gitignore  .gitignore-deploy  .gitmodules  .jscsrc  .jshintignore  .jshintrc  .modernizrrc  .prettierignore  .prettierrc.json  .talismanrc  .travis.yml  CONTRIBUTING.md  DEPLOYMENT-MAAS.md  DEPLOYMENT.md  DOCKER.md  Dockerfile  Gruntfile.js  README-MAAS-GROUP.md  README.md  aids.json  aids.pp.json  all-aides-pole-emploi.json  api.py  api_config.ini  api_config.py  auto-imports.d.ts  (+67 more)
app/: .jshintrc  (+8 more)
tools/aj-llm/: .env.example  .gitignore  INSTALL-MACOS.md  README.md  dev.sh  pyproject.toml
tools/aj-llm/agent/agents/: contribution.py
tools/aj-llm/agent/prompts/: audit_prompts.yaml  contribution.yaml  extraction_prompts.yaml  system_prompt.yaml  triage_prompts.yaml
tools/aj-llm/agent/services/: llm.py  referentiel.py
tools/aj-llm/agent/tools/: institution_lookup.py  yaml_validator.py
tools/aj-llm/backend/: main.py
tools/aj-llm/backend/routes/: auth.py  config.py  contribution.py  health.py  models.py
tools/aj-llm/configs/: settings.py
tools/aj-llm/frontend/: index.html  package-lock.json  package.json  pnpm-lock.yaml  vite.config.ts
tools/aj-llm/tests/: test_contribution_agent.py  test_contribution_route.py  test_imports.py  test_institution_lookup.py  test_llm_contribution.py  test_referentiel.py  test_settings.py  test_yaml_validator.py
(+4558 files in other folders)
