[project]
name = "aj-llm"
version = "0.1.0"
description = "Agents IA pour la base Aides Jeunes"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "arize-phoenix>=14.9.1",
    "fastapi>=0.136.0",
    "langchain>=1.2.15",
    "langgraph>=0.2.0",
    "langchain-google-genai>=4.2.2",
    "langchain-mistralai>=1.1.2",
    "langchain-openai>=1.1.15",
    "openinference-instrumentation-langchain>=0.1.62",
    "opentelemetry-exporter-otlp>=1.40.0",
    "opentelemetry-sdk>=1.40.0",
    "pydantic>=2.13.3",
    "python-dotenv>=1.2.2",
    "pyyaml>=6.0.3",
    "ruamel.yaml>=0.18.0",
    "thefuzz>=0.22.1",
    "httpx>=0.28.1",
    "uvicorn>=0.45.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
include-package-data = true                                           

[tool.setuptools.packages.find]
include = ["agent*", "backend*", "configs*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
